@@ -92,8 +92,8 @@ WHAT IS NEW?
     * "slice x", "slice y", "set slice x", "set slice y", "slice width",
       "slice height", "set horiz align", "set vert align",
       "set horiz anchor", "set vert anchor", "free slice",
-      "first child", "next sibling", "last child",
-      "previous sibling", "create container", "set parent", 
+      "first child", "next sibling", "last child", "previous sibling",
+      "free slice children", "create container", "set parent", 
       "check parentage", "slice screen x", "slice screen y",
       "slice is container", "create rect", "slice is rect"
       "set slice width", "set slice height", "get rect style",
@@ -104,6 +104,7 @@ WHAT IS NEW?
       "first sprite child", "next sprite sibling", "first rect child",
       "next rect sibling", "realign slice", "center slice",
       "slice collide point", "slice collide", "slice contains",
+      "slice at pixel", "find colliding slice",
       "set slice screen x", "set slice screen y", "clamp slice",
       "set padding", "set top padding", "get top padding",
       "set left padding", "get left padding", "set right padding",
